--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
     <div id="viewport">
-        
+
     </div>
+    <script src="src/Controller.js"></script>
+    <script src="src/Port.js"></script>
+    <script src="src/Itinerary.js"></script>
+    <script src="src/Ship.js"></script>
+    <script>
+        const controller = new Controller();
+    </script>
 </body>
 </html>
