--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="viewport">
         <div id="ports">
-
         </div>
+        <div id="ship"></div>
     </div>
     <script src="src/Controller.js"></script>
     <script src="src/Port.js"></script>
@@ -27,6 +27,8 @@
             new Port('Amber Cove')
         ]);
         controller.renderPorts(itinerary.ports);
+        const ship = new Ship(itinerary);
+        controller.renderShip(ship);
     </script>
 </body>
 </html>
