--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
@@ -13,22 +17,24 @@
         <div id="ports">
         </div>
         <div id="ship"></div>
+        <div id="sailbutton">Set Sail!</div>
     </div>
     <script src="src/Controller.js"></script>
     <script src="src/Port.js"></script>
     <script src="src/Itinerary.js"></script>
     <script src="src/Ship.js"></script>
     <script>
-        const controller = new Controller();
         const itinerary = new Itinerary([
             new Port('New York City'),
             new Port('Grand Turk'),
             new Port('San Juan'),
             new Port('Amber Cove')
         ]);
-        controller.renderPorts(itinerary.ports);
+        
         const ship = new Ship(itinerary);
-        controller.renderShip(ship);
+        const controller = new Controller(ship);
+        controller.renderPorts(itinerary.ports);
+        controller.renderShip();
     </script>
 </body>
 </html>
