--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Cruise Ships</title>
 </head>
 <body>
+    <div id="headUpDisplay"></div>
     <div id="viewport">
         <div id="ports">
         </div>
